org.gpr4j/src/org/gpr4j/grammar/GprParser.java
// $ANTLR 3.4 /Users/Charles/Documents/workspace/gpr4j/org.gpr4j/src/org/gpr4j/grammar/Gpr.g 2013-03-22 01:16:17

package org.gpr4j.grammar;

import java.util.ArrayList;

import org.gpr4j.core.Symbol;
import org.gpr4j.core.internal.Loader;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked"})
public class GprParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "A", "ALL", "AT", "B", "C", "CASE", "COMMENT", "D", "DIGIT", "E", "END", "EXTENDS", "EXTERNAL", "F", "FOR", "G", "H", "I", "IDENTIFIER", "IS", "J", "K", "L", "LIMITED", "LOWER_CASE_LETTER", "M", "N", "NULL", "O", "OTHERS", "P", "PACKAGE", "PROJECT", "Q", "R", "RENAMES", "S", "STRING_ELEMENT", "STRING_LITERAL", "T", "TYPE", "U", "UPPER_CASE_LETTER", "USE", "V", "W", "WHEN", "WITH", "WS", "X", "Y", "Z", "'&'", "'('", "')'", "','", "'.'", "':'", "':='", "';'", "'=>'", "'\\''", "'|'"
    };

    public static final int EOF=-1;
    public static final int T__56=56;
    public static final int T__57=57;
    public static final int T__58=58;
    public static final int T__59=59;
    public static final int T__60=60;
    public static final int T__61=61;
    public static final int T__62=62;
    public static final int T__63=63;
    public static final int T__64=64;
    public static final int T__65=65;
    public static final int T__66=66;
    public static final int A=4;
    public static final int ALL=5;
    public static final int AT=6;
    public static final int B=7;
    public static final int C=8;
    public static final int CASE=9;
    public static final int COMMENT=10;
    public static final int D=11;
    public static final int DIGIT=12;
    public static final int E=13;
    public static final int END=14;
    public static final int EXTENDS=15;
    public static final int EXTERNAL=16;
    public static final int F=17;
    public static final int FOR=18;
    public static final int G=19;
    public static final int H=20;
    public static final int I=21;
    public static final int IDENTIFIER=22;
    public static final int IS=23;
    public static final int J=24;
    public static final int K=25;
    public static final int L=26;
    public static final int LIMITED=27;
    public static final int LOWER_CASE_LETTER=28;
    public static final int M=29;
    public static final int N=30;
    public static final int NULL=31;
    public static final int O=32;
    public static final int OTHERS=33;
    public static final int P=34;
    public static final int PACKAGE=35;
    public static final int PROJECT=36;
    public static final int Q=37;
    public static final int R=38;
    public static final int RENAMES=39;
    public static final int S=40;
    public static final int STRING_ELEMENT=41;
    public static final int STRING_LITERAL=42;
    public static final int T=43;
    public static final int TYPE=44;
    public static final int U=45;
    public static final int UPPER_CASE_LETTER=46;
    public static final int USE=47;
    public static final int V=48;
    public static final int W=49;
    public static final int WHEN=50;
    public static final int WITH=51;
    public static final int WS=52;
    public static final int X=53;
    public static final int Y=54;
    public static final int Z=55;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public GprParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public GprParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

    public String[] getTokenNames() { return GprParser.tokenNames; }
    public String getGrammarFileName() { return "/Users/Charles/Documents/workspace/gpr4j/org.gpr4j/src/org/gpr4j/grammar/Gpr.g"; }


     private Loader gprLoader = new Loader();
      private List<RecognitionException> exceptions = new ArrayList<RecognitionException>();
     
        public List<RecognitionException> getExceptions() {
            return exceptions;
        }
     
        @Override
        public void reportError(RecognitionException e) {
            exceptions.add(e);
        }
     
     public GprParser(Loader gprLoader, TokenStream input) {
            this(input, new RecognizerSharedState());
            this.gprLoader = gprLoader;
        }



    // $ANTLR start "project"
    // /Users/Charles/Documents/workspace/gpr4j/org.gpr4j/src/org/gpr4j/grammar/Gpr.g:48:1: project : context_clause project_declaration EOF ;
    public final void project() throws RecognitionException {
        try {
            // /Users/Charles/Documents/workspace/gpr4j/org.gpr4j/src/org/gpr4j/grammar/Gpr.g:49:3: ( context_clause project_declaration EOF )
            // /Users/Charles/Documents/workspace/gpr4j/org.gpr4j/src/org/gpr4j/grammar/Gpr.g:50:3: context_clause project_declaration EOF
            {
            pushFollow(FOLLOW_context_clause_in_project52);
            context_clause();

            state._fsp--;


            pushFollow(FOLLOW_project_declaration_in_project54);
            project_declaration();

            state._fsp--;


            match(input,EOF,FOLLOW_EOF_in_project56); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "project"



    // $ANTLR start "context_clause"
    // /Users/Charles/Documents/workspace/gpr4j/org.gpr4j/src/org/gpr4j/grammar/Gpr.g:53:1: context_clause : ( with_clause )* ;
    public final void context_clause() throws RecognitionException {
        try {
            // /Users/Charles/Documents/workspace/gpr4j/org.gpr4j/src/org/gpr4j/grammar/Gpr.g:53:16: ( ( with_clause )* )
            // /Users/Charles/Documents/workspace/gpr4j/org.gpr4j/src/org/gpr4j/grammar/Gpr.g:53:18: ( with_clause )*
            {
            // /Users/Charles/Documents/workspace/gpr4j/org.gpr4j/src/org/gpr4j/grammar/Gpr.g:53:18: ( with_clause )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==WITH) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // /Users/Charles/Documents/workspace/gpr4j/org.gpr4j/src/org/gpr4j/grammar/Gpr.g:53:18: with_clause
            	    {
            	    pushFollow(FOLLOW_with_clause_in_context_clause67);
            	    with_clause();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "context_clause"



    // $ANTLR start "with_clause"
    // /Users/Charles/Documents/workspace/gpr4j/org.gpr4j/src/org/gpr4j/grammar/Gpr.g:55:1: with_clause : WITH first_path= path_name ( ',' other_path= path_name )* ';' ;
    public final void with_clause() throws RecognitionException {
        String first_path =null;

        String other_path =null;


        try {
            // /Users/Charles/Documents/workspace/gpr4j/org.gpr4j/src/org/gpr4j/grammar/Gpr.g:56:3: ( WITH first_path= path_name ( ',' other_path= path_name )* ';' )
            // /Users/Charles/Documents/workspace/gpr4j/org.gpr4j/src/org/gpr4j/grammar/Gpr.g:56:5: WITH first_path= path_name ( ',' other_path= path_name )* ';'
            {
            match(input,WITH,FOLLOW_WITH_in_with_clause79); 

            pushFollow(FOLLOW_path_name_in_with_clause88);
            first_path=path_name();

            state._fsp--;


            gprLoader.addProject(first_path);

            // /Users/Charles/Documents/workspace/gpr4j/org.gpr4j/src/org/gpr4j/grammar/Gpr.g:58:5: ( ',' other_path= path_name )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==59) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // /Users/Charles/Documents/workspace/gpr4j/org.gpr4j/src/org/gpr4j/grammar/Gpr.g:58:6: ',' other_path= path_name
            	    {
            	    match(input,59,FOLLOW_59_in_with_clause97); 

            	    pushFollow(FOLLOW_path_name_in_with_clause101);
            	    other_path=path_name();

            	    state._fsp--;


            	    gprLoader.addProject(other_path);

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            match(input,63,FOLLOW_63_in_with_clause113); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "with_clause"



    // $ANTLR start "path_name"
    // /Users/Charles/Documents/workspace/gpr4j/org.gpr4j/src/org/gpr4j/grammar/Gpr.g:61:1: path_name returns [String result] : STRING_LITERAL ;
    public final String path_name() throws RecognitionException {
        String result = null;


        Token STRING_LITERAL1=null;

        try {
            // /Users/Charles/Documents/workspace/gpr4j/org.gpr4j/src/org/gpr4j/grammar/Gpr.g:62:3: ( STRING_LITERAL )
            // /Users/Charles/Documents/workspace/gpr4j/org.gpr4j/src/org/gpr4j/grammar/Gpr.g:63:3: STRING_LITERAL
            {
            STRING_LITERAL1=(Token)match(input,STRING_LITERAL,FOLLOW_STRING_LITERAL_in_path_name131); 

            result = (STRING_LITERAL1!=null?STRING_LITERAL1.getText():null).replaceAll("\"", "");

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return result;
    }
    // $ANTLR end "path_name"



    // $ANTLR start "project_declaration"
    // /Users/Charles/Documents/workspace/gpr4j/org.gpr4j/src/org/gpr4j/grammar/Gpr.g:67:1: project_declaration : simple_project_declaration ;
    public final void project_declaration() throws RecognitionException {
        try {
            // /Users/Charles/Documents/workspace/gpr4j/org.gpr4j/src/org/gpr4j/grammar/Gpr.g:67:21: ( simple_project_declaration )
            // /Users/Charles/Documents/workspace/gpr4j/org.gpr4j/src/org/gpr4j/grammar/Gpr.g:67:23: simple_project_declaration
            {
            pushFollow(FOLLOW_simple_project_declaration_in_project_declaration146);
            simple_project_declaration();

            state._fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "project_declaration"



    // $ANTLR start "simple_project_declaration"
    // /Users/Charles/Documents/workspace/gpr4j/org.gpr4j/src/org/gpr4j/grammar/Gpr.g:69:1: simple_project_declaration : PROJECT begin_project_name= name IS ( declarative_item )* END end_project_name= name ';' {...}?;
    public final void simple_project_declaration() throws RecognitionException {
        GprParser.name_return begin_project_name =null;

        GprParser.name_return end_project_name =null;


        try {
            // /Users/Charles/Documents/workspace/gpr4j/org.gpr4j/src/org/gpr4j/grammar/Gpr.g:70:3: ( PROJECT begin_project_name= name IS ( declarative_item )* END end_project_name= name ';' {...}?)
            // /Users/Charles/Documents/workspace/gpr4j/org.gpr4j/src/org/gpr4j/grammar/Gpr.g:71:3: PROJECT begin_project_name= name IS ( declarative_item )* END end_project_name= name ';' {...}?
            {
            match(input,PROJECT,FOLLOW_PROJECT_in_simple_project_declaration160); 

            pushFollow(FOLLOW_name_in_simple_project_declaration167);
            begin_project_name=name();

            state._fsp--;


            match(input,IS,FOLLOW_IS_in_simple_project_declaration172); 

            // /Users/Charles/Documents/workspace/gpr4j/org.gpr4j/src/org/gpr4j/grammar/Gpr.g:74:3: ( declarative_item )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==CASE||LA3_0==FOR||LA3_0==IDENTIFIER||LA3_0==NULL||LA3_0==PACKAGE||LA3_0==TYPE) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // /Users/Charles/Documents/workspace/gpr4j/org.gpr4j/src/org/gpr4j/grammar/Gpr.g:74:3: declarative_item
            	    {
            	    pushFollow(FOLLOW_declarative_item_in_simple_project_declaration176);
            	    declarative_item();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);


            match(input,END,FOLLOW_END_in_simple_project_declaration181); 

            pushFollow(FOLLOW_name_in_simple_project_declaration187);
            end_project_name=name();

            state._fsp--;


            match(input,63,FOLLOW_63_in_simple_project_declaration191); 

            if ( !(((begin_project_name!=null?input.toString(begin_project_name.start,begin_project_name.stop):null).equals((end_project_name!=null?input.toString(end_project_name.start,end_project_name.stop):null)))) ) {
                throw new FailedPredicateException(input, "simple_project_declaration", "$begin_project_name.text.equals($end_project_name.text)");
            }

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "simple_project_declaration"


    public static class name_return extends ParserRuleReturnScope {
        public String result;
    };


    // $ANTLR start "name"
    // /Users/Charles/Documents/workspace/gpr4j/org.gpr4j/src/org/gpr4j/grammar/Gpr.g:81:1: name returns [String result] : first= simple_name ( '.' other= simple_name )* ;
    public final GprParser.name_return name() throws RecognitionException {
        GprParser.name_return retval = new GprParser.name_return();
        retval.start = input.LT(1);


        GprParser.simple_name_return first =null;

        GprParser.simple_name_return other =null;


        try {
            // /Users/Charles/Documents/workspace/gpr4j/org.gpr4j/src/org/gpr4j/grammar/Gpr.g:82:3: (first= simple_name ( '.' other= simple_name )* )
            // /Users/Charles/Documents/workspace/gpr4j/org.gpr4j/src/org/gpr4j/grammar/Gpr.g:83:3: first= simple_name ( '.' other= simple_name )*
            {
            pushFollow(FOLLOW_simple_name_in_name218);
            first=simple_name();

            state._fsp--;


            retval.result = (first!=null?input.toString(first.start,first.stop):null);

            // /Users/Charles/Documents/workspace/gpr4j/org.gpr4j/src/org/gpr4j/grammar/Gpr.g:84:3: ( '.' other= simple_name )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==60) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // /Users/Charles/Documents/workspace/gpr4j/org.gpr4j/src/org/gpr4j/grammar/Gpr.g:84:4: '.' other= simple_name
            	    {
            	    match(input,60,FOLLOW_60_in_name226); 

            	    pushFollow(FOLLOW_simple_name_in_name232);
            	    other=simple_name();

            	    state._fsp--;


            	    retval.result += "." + (other!=null?input.toString(other.start,other.stop):null);

            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);


        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "name"


    public static class simple_name_return extends ParserRuleReturnScope {
    };


    // $ANTLR start "simple_name"
    // /Users/Charles/Documents/workspace/gpr4j/org.gpr4j/src/org/gpr4j/grammar/Gpr.g:87:1: simple_name : IDENTIFIER ;
    public final GprParser.simple_name_return simple_name() throws RecognitionException {
        GprParser.simple_name_return retval = new GprParser.simple_name_return();
        retval.start = input.LT(1);


        try {
            // /Users/Charles/Documents/workspace/gpr4j/org.gpr4j/src/org/gpr4j/grammar/Gpr.g:88:3: ( IDENTIFIER )
            // /Users/Charles/Documents/workspace/gpr4j/org.gpr4j/src/org/gpr4j/grammar/Gpr.g:89:3: IDENTIFIER
            {
            match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_simple_name253); 

            }

            retval.stop = input.LT(-1);


        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "simple_name"



    // $ANTLR start "declarative_item"
    // /Users/Charles/Documents/workspace/gpr4j/org.gpr4j/src/org/gpr4j/grammar/Gpr.g:92:1: declarative_item : ( simple_declarative_item | typed_string_declaration | package_declaration );
    public final void declarative_item() throws RecognitionException {
        try {
            // /Users/Charles/Documents/workspace/gpr4j/org.gpr4j/src/org/gpr4j/grammar/Gpr.g:93:3: ( simple_declarative_item | typed_string_declaration | package_declaration )
            int alt5=3;
            switch ( input.LA(1) ) {
            case CASE:
            case FOR:
            case IDENTIFIER:
            case NULL:
                {
                alt5=1;
                }
                break;
            case TYPE:
                {
                alt5=2;
                }
                break;
            case PACKAGE:
                {
                alt5=3;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;

            }

            switch (alt5) {
                case 1 :
                    // /Users/Charles/Documents/workspace/gpr4j/org.gpr4j/src/org/gpr4j/grammar/Gpr.g:94:3: simple_declarative_item
                    {
                    pushFollow(FOLLOW_simple_declarative_item_in_declarative_item269);
                    simple_declarative_item();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // /Users/Charles/Documents/workspace/gpr4j/org.gpr4j/src/org/gpr4j/grammar/Gpr.g:95:5: typed_string_declaration
                    {
                    pushFollow(FOLLOW_typed_string_declaration_in_declarative_item276);
                    typed_string_declaration();

                    state._fsp--;


                    }
                    break;
                case 3 :
                    // /Users/Charles/Documents/workspace/gpr4j/org.gpr4j/src/org/gpr4j/grammar/Gpr.g:96:5: package_declaration
                    {
                    pushFollow(FOLLOW_package_declaration_in_declarative_item282);
                    package_declaration();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "declarative_item"



    // $ANTLR start "simple_declarative_item"
    // /Users/Charles/Documents/workspace/gpr4j/org.gpr4j/src/org/gpr4j/grammar/Gpr.g:99:1: simple_declarative_item : ( variable_declaration | typed_variable_declaration | attribute_declaration | case_statement | empty_declaration );
    public final void simple_declarative_item() throws RecognitionException {
        try {
            // /Users/Charles/Documents/workspace/gpr4j/org.gpr4j/src/org/gpr4j/grammar/Gpr.g:100:3: ( variable_declaration | typed_variable_declaration | attribute_declaration | case_statement | empty_declaration )
            int alt6=5;
            switch ( input.LA(1) ) {
            case IDENTIFIER:
                {
                int LA6_1 = input.LA(2);

                if ( (LA6_1==62) ) {
                    alt6=1;
                }
                else if ( (LA6_1==61) ) {
                    alt6=2;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 6, 1, input);

                    throw nvae;

                }
                }
                break;
            case FOR:
                {
                alt6=3;
                }
                break;
            case CASE:
                {
                alt6=4;
                }
                break;
            case NULL:
                {
                alt6=5;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 6, 0, input);

                throw nvae;

            }

            switch (alt6) {
                case 1 :
                    // /Users/Charles/Documents/workspace/gpr4j/org.gpr4j/src/org/gpr4j/grammar/Gpr.g:101:3: variable_declaration
                    {
                    pushFollow(FOLLOW_variable_declaration_in_simple_declarative_item299);
                    variable_declaration();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // /Users/Charles/Documents/workspace/gpr4j/org.gpr4j/src/org/gpr4j/grammar/Gpr.g:102:5: typed_variable_declaration
                    {
                    pushFollow(FOLLOW_typed_variable_declaration_in_simple_declarative_item305);
                    typed_variable_declaration();

                    state._fsp--;


                    }
                    break;
                case 3 :
                    // /Users/Charles/Documents/workspace/gpr4j/org.gpr4j/src/org/gpr4j/grammar/Gpr.g:103:5: attribute_declaration
                    {
                    pushFollow(FOLLOW_attribute_declaration_in_simple_declarative_item311);
                    attribute_declaration();

                    state._fsp--;


                    }
                    break;
                case 4 :
                    // /Users/Charles/Documents/workspace/gpr4j/org.gpr4j/src/org/gpr4j/grammar/Gpr.g:104:5: case_statement
                    {
                    pushFollow(FOLLOW_case_statement_in_simple_declarative_item317);
                    case_statement();

                    state._fsp--;


                    }
                    break;
                case 5 :
                    // /Users/Charles/Documents/workspace/gpr4j/org.gpr4j/src/org/gpr4j/grammar/Gpr.g:105:5: empty_declaration
                    {
                    pushFollow(FOLLOW_empty_declaration_in_simple_declarative_item323);
                    empty_declaration();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "simple_declarative_item"



    // $ANTLR start "typed_string_declaration"
    // /Users/Charles/Documents/workspace/gpr4j/org.gpr4j/src/org/gpr4j/grammar/Gpr.g:108:1: typed_string_declaration : TYPE simple_name IS '(' STRING_LITERAL ( ',' STRING_LITERAL )* ')' ';' ;
    public final void typed_string_declaration() throws RecognitionException {
        try {
            // /Users/Charles/Documents/workspace/gpr4j/org.gpr4j/src/org/gpr4j/grammar/Gpr.g:109:3: ( TYPE simple_name IS '(' STRING_LITERAL ( ',' STRING_LITERAL )* ')' ';' )
            // /Users/Charles/Documents/workspace/gpr4j/org.gpr4j/src/org/gpr4j/grammar/Gpr.g:110:3: TYPE simple_name IS '(' STRING_LITERAL ( ',' STRING_LITERAL )* ')' ';'
            {
            match(input,TYPE,FOLLOW_TYPE_in_typed_string_declaration339); 

            pushFollow(FOLLOW_simple_name_in_typed_string_declaration341);
            simple_name();

            state._fsp--;


            match(input,IS,FOLLOW_IS_in_typed_string_declaration343); 

            match(input,57,FOLLOW_57_in_typed_string_declaration345); 

            match(input,STRING_LITERAL,FOLLOW_STRING_LITERAL_in_typed_string_declaration347); 

            // /Users/Charles/Documents/workspace/gpr4j/org.gpr4j/src/org/gpr4j/grammar/Gpr.g:110:42: ( ',' STRING_LITERAL )*
            loop7:
            do {
                int alt7=2;
                int LA7_0 = input.LA(1);

                if ( (LA7_0==59) ) {
                    alt7=1;
                }


                switch (alt7) {
            	case 1 :
            	    // /Users/Charles/Documents/workspace/gpr4j/org.gpr4j/src/org/gpr4j/grammar/Gpr.g:110:43: ',' STRING_LITERAL
            	    {
            	    match(input,59,FOLLOW_59_in_typed_string_declaration350); 

            	    match(input,STRING_LITERAL,FOLLOW_STRING_LITERAL_in_typed_string_declaration352); 

            	    }
            	    break;

            	default :
            	    break loop7;
                }
            } while (true);


            match(input,58,FOLLOW_58_in_typed_string_declaration356); 

            match(input,63,FOLLOW_63_in_typed_string_declaration358); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "typed_string_declaration"



    // $ANTLR start "case_statement"
    // /Users/Charles/Documents/workspace/gpr4j/org.gpr4j/src/org/gpr4j/grammar/Gpr.g:113:1: case_statement : CASE name IS ( case_item )* END CASE ';' ;
    public final void case_statement() throws RecognitionException {
        try {
            // /Users/Charles/Documents/workspace/gpr4j/org.gpr4j/src/org/gpr4j/grammar/Gpr.g:114:3: ( CASE name IS ( case_item )* END CASE ';' )
            // /Users/Charles/Documents/workspace/gpr4j/org.gpr4j/src/org/gpr4j/grammar/Gpr.g:115:3: CASE name IS ( case_item )* END CASE ';'
            {
            match(input,CASE,FOLLOW_CASE_in_case_statement374); 

            pushFollow(FOLLOW_name_in_case_statement376);
            name();

            state._fsp--;


            match(input,IS,FOLLOW_IS_in_case_statement378); 

            // /Users/Charles/Documents/workspace/gpr4j/org.gpr4j/src/org/gpr4j/grammar/Gpr.g:115:16: ( case_item )*
            loop8:
            do {
                int alt8=2;
                int LA8_0 = input.LA(1);
